[tool.poetry]
name = "course 5"
version = "0.1.0"
description = ""
authors = ["Ksenia-Kostyuk <hatan2235@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
install = "^1.3.5"
psycopg2 = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"